--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <title>Pyofwave by pyofwave</title>
+		<style>.name {text-decoration: underline; font-weight: bold}</style>
   </head>
 
   <body>
@@ -31,18 +32,32 @@
         <hr>
 
         <section id="main_content">
-          <h1>PyOfWave implements "**XWave**" in <a href="http://python.org">Python</a>
+          <h1>PyOfWave implements "<span class="name">XWave</span>" in <a href="http://python.org">Python</a>
 </h1>
 
-<p>XWave is:</p>
+<p>XWave is (or soon will be):</p>
 
 <ul>
 <li>Decentralized</li>
 <li>Multi-cast</li>
+<li>Live</li>
+<li>Rich text</li>
 <li>Semi-structured</li>
 <li>Extensible</li>
-<li>All in one
-communication.</li>
+<li>Backwards compatible</li>
+</ul>
+<p>communication bringing together:</p>
+<ul>
+<li>eMail</li>
+<li>Instant Messaging</li>
+<li>Forums</li>
+<li>Wikis</li>
+</ul>
+<p>and facilitating (planned):</p>
+<ul>
+<li>FoaF social web</li>
+<li>RDF Federation</li>
+<li>Collaborative tools/games</li>
 </ul>
         </section>
 
