--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="inner">
 
         <header>
-          <h1>Pyofwave</h1>
+          <h1><img src="images/PyOfWave.png" alt="PyOfWave logo (a kite with robined tail forming the W in PyOfWave)." /></h1>
           <h2>Simple All-in-One multicast/decentralized communication.</h2>
         </header>
 
@@ -30,6 +30,7 @@
         </section>
 
 				<nav>
+					<a href="docs/" title="PyOfWave documentation">Docs</a>
 					<a href="about/" title="About PyOfWave">About</a>
 					<a href="demo/" title="Eventual PyOfWave Demo">Demo</a>
 				</nav>
