--- a/about/index.html
+++ b/about/index.html
@@ -16,6 +16,7 @@
   <div id="container">
 		<nav>
 			<a href="/" title="Back to home">Home</a>
+			<a href="/docs/" title="Read our documentation">Docs</a>
 			<a href="/about/" title="About PyOfWave">About</a>
 			<a href="/demo/" title="Eventual PyOfWave Demo">Demo</a>
 		</nav>
