--- a/demo/index.html
+++ b/demo/index.html
@@ -4,9 +4,9 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/print.css" media="print" />
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -19,7 +19,10 @@
 
   <div id="container">
 		<nav>
-			<a href="/" title="Back to home">Home</a><a href="/about" title="About PyOfWave">About</a><a href="/demo">Demo</a>
+			<a href="/" title="Back to home">Home</a>
+			<a href="/docs" title="Read our documentation">Docs</a>
+			<a href="/about" title="About PyOfWave">About</a>
+			<a href="/demo" title="Eventual PyOfWave demo">Demo</a>
 		</nav>
 		<hr />
 		<section id="main-content">
